<resources>
    <string name="app_name">Flower Store</string>
    <string name="login">Đăng nhập</string>
    <string name="password">Mật khẩu</string>
    <string name="forgetpass">Quên mật khẩu</string>
    <string name="title">IDEA Flower Store</string>
    <string name="email">Email</string>
    <string name="signup">Đăng ký</string>
    <string name="name">Tên bạn</string>
    <string name="sendcode">Lấy mã xác nhận</string>
    <string name="code">Mã xác nhận</string>
    <string name="scrollview">Srcoll View</string>
    <string name="menu">Menu</string>
    <string name="home">Trang chủ</string>
    <string name="cart">Giỏ hàng</string>
    <string name="order">Đơn hàng của bạn</string>
    <string name="logout">Đăng xuất</string>
    <string name="navigation">Mở menu</string>
    <string name="close">Đóng</string>


    <string name="getpass">Lấy lại mật khẩu</string>
    <string name="find">Tìm gì nào</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="danhmuc">Danh mục</string>
    <string name="caycanh">Cây cảnh</string>
    <string name="hoachucmung">Hoa chúc mừng</string>
    <string name="hoacuoi">Hoa tình yêu</string>
    <string name="hoatangle">Hoa tang lễ</string>
    <string name="flower">Hoa</string>
    <string name="noitem">No item</string>
    <string name="noprice">Hết hàng</string>
    <string name="addtocart">Xem chi tiết</string>
    <string name="viewdetailt">Xem chi tiết</string>
    <string name="themhoa">Thêm hoa</string>
    <string name="FlowerTool">Công cụ quản lý hoa</string>
    <string name="buy">Đặt hàng</string>
    <string name="title_activity_test_detail">TestDetail</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="cay">Cây</string>
    <string name="hoa">Hoa</string>
    <string name="chaucay">Chậu cây</string>
    <string name="product">Sản phẩm</string>
    <string name="khongcosanpham">Không có sản phẩm nào</string>
    <string name="all">Tất cả sản phẩm</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>