<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/imgView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    tools:context=".Homepage">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="#5644a1">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/editTextTextPersonName2"
                        android:layout_width="match_parent"
                        android:layout_height="45dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/custom_edittext"
                        android:drawableStart="@drawable/ic_baseline_search_24"
                        android:drawablePadding="10dp"
                        android:drawableTint="#4CAF50"
                        android:ems="10"
                        android:hint="@string/find"
                        android:inputType="textPersonName"
                        android:padding="10dp"
                        android:textColor="#4CAF50"
                        android:textColorHint="#4CAF50"
                        android:textSize="18sp" />

                    <ImageButton
                        android:id="@+id/imgBT_cart"
                        android:layout_width="45dp"
                        android:layout_height="45dp"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        app:srcCompat="@drawable/ic_baseline_shopping_cart_24" />
                </TableRow>

            </TableLayout>

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/vp2_title"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_weight="1">

            </androidx.viewpager2.widget.ViewPager2>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/danhmuc"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="1">

                <TableRow android:weightSum="1">

                    <ImageButton
                        android:id="@+id/imgBT_danhmuc1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:adjustViewBounds="true"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:cropToPadding="false"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/cay_canh" />

                    <ImageButton
                        android:id="@+id/imgBT_danhmuc2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:adjustViewBounds="true"
                        android:backgroundTint="@color/design_default_color_background"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/hoa_sinhnhat" />

                    <ImageButton
                        android:id="@+id/imgBT_danhmuc3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:adjustViewBounds="true"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/hoa_tinhyeu" />

                    <ImageButton
                        android:id="@+id/imgBT_danhmuc4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:adjustViewBounds="true"
                        android:backgroundTint="@color/cardview_shadow_end_color"
                        android:scaleType="fitXY"
                        app:srcCompat="@drawable/hoa_tangle" />
                </TableRow>

                <TableRow android:weightSum="1">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/caycanh" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/hoachucmung" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/hoacuoi" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.25"
                        android:gravity="center"
                        android:text="@string/hoatangle" />
                </TableRow>
            </TableLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/flower"
                android:textSize="32sp"
                android:textStyle="bold" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/ViewContent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
    </ScrollView>


</LinearLayout>