<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".Homepage">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="1">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/box"
                    android:weightSum="1">
                    <ImageView
                        android:layout_margin="10dp"
                        android:id="@+id/imgFlower1"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        app:srcCompat="@drawable/hoahong1"/>
                    <TextView
                        android:id="@+id/TV_name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noitem"
                        android:textSize="18sp"
                        android:layout_marginStart="15dp"/>

                    <RatingBar
                        android:id="@+id/rating1"
                        style="@android:style/Widget.Holo.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="#ACA7A7"
                        android:foregroundTint="#3C3838"
                        android:indeterminate="false"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:progressTint="#FDD835"
                        android:rating="0"
                        android:stepSize="0.1" />
                    <TextView
                        android:id="@+id/TV_pricef1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/noprice"
                        android:textColor="#EA0B49"
                        android:layout_marginStart="15dp"/>

                    <Button
                        android:id="@+id/BT_add1"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="#DD0F3C"
                        android:text="@string/addtocart"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/lay2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/box"
                    android:orientation="vertical"
                    android:visibility="visible"
                    android:weightSum="1">

                    <ImageView
                        android:id="@+id/imgFlower2"
                        android:layout_width="wrap_content"
                        android:layout_height="200dp"
                        android:layout_margin="10dp"
                        app:srcCompat="@drawable/hoahong1" />

                    <TextView
                        android:id="@+id/TV_name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/noitem"
                        android:textSize="18sp" />

                    <RatingBar
                        android:id="@+id/rating2"
                        style="@android:style/Widget.Holo.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:background="#ACA7A7"
                        android:foregroundTint="#3C3838"
                        android:indeterminate="false"
                        android:isIndicator="true"
                        android:numStars="5"
                        android:progressTint="#FDD835"
                        android:rating="0"
                        android:stepSize="0.1" />

                    <TextView
                        android:id="@+id/TV_pricef2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="15dp"
                        android:text="@string/noprice"
                        android:textColor="#EA0B49" />

                    <Button
                        android:id="@+id/BT_add2"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginBottom="10dp"
                        android:backgroundTint="#DD0F3C"
                        android:text="@string/addtocart"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </TableRow>
    </TableLayout>
</LinearLayout>